Fix timestamp issue in RTCVideoEncoder for native frames

Speculative fix for WebRTC test failures. See issue for more information.

BUG=732345
TBR=emircan

Review-Url: https://codereview.chromium.org/2934793002
Cr-Commit-Position: refs/heads/master@{#478627}

Former-commit-id: 25b7a7a6350e64c24953b43594ed2b73afe33246